Fix Site title margin on mobile. Close #1

--- a/themes/readnik/style.css
+++ b/themes/readnik/style.css
@@ -40,8 +40,6 @@ body {
   .pages a {
     margin: 0 0 0 7px !important;
   }
-  .blog-info h1  {
-    margin: 0 7px 0 0 !important;
   }
   .scriptogram-link {
     bottom: 7px !important;
